# aitools-discussion-grader

./: .gitignore  CANVAS_README.md  CURRENT_TODO.md  README.md  batch_grade.py  demo_grading.py  grade_discussion.py  pyproject.toml  question.md
.clinerules/: 01-discussion-grading-instructions.md  02-virutal environment.md  03-run-tests-from-top-level.md  04-test-assertions-need-error-messages-in-english.md
discussion-grader/: canvas_speedgrader.py  grader.py
discussion-grader/config/: config.json
discussion-grader/controllers/: __init__.py  discussion.py  reporting.py  submission.py
discussion-grader/lib/: ai.py  ai_providers.py  config.py  discussion.py  grading.py  reporting.py  submission.py  submission_grader.py
discussion-grader/tests/: conftest.py
discussion-grader/tests/unit/controllers/: test_discussion_controller.py  test_reporting_controller.py  test_submission_controller.py
discussion-grader/tests/unit/lib/: test_ai.py  test_ai_providers.py  test_discussion.py  test_reporting.py  test_submission_grader.py
memory-bank/: activeContext.md  implementation_steps.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
