[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discussion-grader"
version = "0.1.0"
description = "AI-powered discussion grading system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.5.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "pyperclip>=1.8.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["discussion-grader"]

[tool.pytest.ini_options]
testpaths = ["discussion-grader/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
